--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angularfire": "*",
     "firebase-simple-login": "*",
     "lodash": "*",
-    "textAngular": "*"
+    "textAngular": "*",
+    "jquery": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0-beta.3",
